This file documents the revision history for the SNClient+ agent.

0.03       Mon Jun 12 22:23:02 CEST 2023
         - implement filter and thresholds
         - packaging
           - add windows service mode
         - add command alias support
         - add log rotation
         - add optional automatic updates

0.02       Sun Apr  2 22:48:22 CEST 2023
         - add packaging
           - windows
           - rpm
           - deb
         - add nrpe support
         - add check_nsc_web rest api support
         - add basic checks
         - add basic prometheus metrics