@@ -133,6 +133,9 @@ certificate = ${certificate-path}/server.crt
 ; certificate key - ssl private key to use for the ssl server.
 certificate key = ${certificate-path}/server.key
 
+; client certificates - require client certificate (list of pem files).
+;client certificates = ${certificate-path}/client1.pem, ${certificate-path}/client2.pem
+
 
 ; Windows system - Section for windows system checks and system settings
 [/settings/system/windows]
